fixed toggle not showing up when in mobile view.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
 nav.navbar-washos .navbar-nav a {
     text-transform: uppercase;
-    color: #fff;
+    color: #fff !important;
     font-weight: 300;
     font-size: 14px;
 }
